# AI-SpeedUp

./: README.md
Qt/qt6-cmake-demo/: .gitignore  CMakeLists.txt  build.bat  qt-creator-log.txt  readme.md
Qt/qt6-cmake-demo/assets/: assets.qrc
Qt/qt6-cmake-demo/i18n/: HelloQml_en.ts  HelloQml_zh.ts
Qt/qt6-cmake-demo/qml/: HelloScreen.qml  Main.qml
Qt/qt6-cmake-demo/qml/components/: BusinessComponent.qml  RoundedWindow.qml  SideBar.qml  SubPage.qml  WindowResizer.qml  about.qml  function.qml  settings.qml
Qt/qt6-cmake-demo/src/: main.cpp
cpp/blas-demo/: CMakeLists.txt  README.md
cpp/blas-demo/src/: main.cpp
cpp/opencv-all-in-one/: .gitignore  CMakeLists.txt  build.bat  compile-opencv.bat
cpp/opencv-all-in-one/cmake/: opencv-cmake-option.cmake
cpp/opencv-all-in-one/src/: CMakeLists.txt  main.cpp  mylib.cpp
cpp/opencv-all-in-one/src/include/: interface.h
front/compareVideo/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
front/compareVideo/src/: App.jsx  index.css  index.jsx
front/compareVideo/src/components/: VideoComparison.jsx
front/image_process/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  使用说明.md
front/image_process/src/: App.tsx  index.css  index.tsx
front/image_process/src-tauri/: Cargo.toml  tauri.conf.json
front/image_process/src-tauri/capabilities/: default.json
front/image_process/src-tauri/src/: lib.rs  main.rs
front/vitepress-demo/: .gitignore  package.json  readme.md
front/vitepress-demo/docs/: index.md
front/vitepress-demo/docs/.vitepress/: config.mjs
front/vitepress-demo/docs/guide/: best-practices.md  features.md  getting-started.md  index.md
infer/: .gitignore  CMakeLists.txt  README.md  build.bat  run.bat  run_cuda_test.bat  run_tensorrt_demo.bat
infer/src/: cuda_only_test.cpp  hello_test.cpp  image_utils.cpp  image_utils.h  logger.cpp  logger.h  main.cpp  simple_test.cpp  utils.cpp  utils.h
webassembly/opencv-cpp-demo/: .gitignore  CMakeLists.txt  README.md  WASM_EXPORT_GUIDE.md  example.html
webassembly/opencv-cpp-demo/src/: main.cpp
webassembly/opencv-webassembly-demo/: README.md  package-lock.json  package.json
webassembly/opencv-webassembly-demo/src/: App.tsx
webextesions/bili-speed-up-video/: .gitignore  DEVELOPMENT.md  INSTALL.md  README.md  SUCCESS.md  background.js  content.js  debug.js  manifest.json  popup.css  popup.html  popup.js  test-embedded.html  test.html  tutorial.md
webextesions/bili-speed-up-video/icons/: README.md
